--- a/VCM01/VCM01.html
+++ b/VCM01/VCM01.html
@@ -144,4 +144,4 @@
     initCountdown(new Date(2028,1,20,18,0,0),{days:'days2',hours:'hours2',minutes:'minutes2',seconds:'seconds2'});
   </script>
 </body>
-</html>
+</html>.
